<resources>
    <string name="app_name">Блокнот</string>
    <string name="textPinCode">Введите ПИН-код</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_backspace">←</string>
    <string name="action_settings">Настройки</string>
    <string name="settings_text_enter">Введите новый ПИН-код 4 цифры:</string>
    <string name="save">Сохранить</string>
    <string name="new_note">Новая заметка</string>
    <string name="edit_title">Заголовок</string>
    <string name="edit_text_note">Тело заметки</string>
    <string name="edit_text_dead_line">Крайний срок</string>
    <string name="toast_error_date">Введите правильно дату и время</string>
    <string name="toast_error_need_text">Заполните все строки</string>
    <string name="toast_error_delete">Ошибка удаления</string>
    <string name="toast_error_save">Ошибка сохранения</string>
    <string name="toast_error_wrong_result">Отрицательный результат</string>
    <string name="toast_error_wrong_save_pin">ПИН-код должен состоять из 4 цифр</string>
    <string name="toast_save_pin">ПИН-код сохранён</string>
    <string name="txt_wrong_pin">Неверный ПИН-код</string>
    <string name="txt_true_pin">Добро пожаловать!</string>

    <string name="delete_data">Удалить заметку?</string>
    <string name="delete">Удаление</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="deleted">Удалено</string>
    <string name="negative">Отмена</string>

</resources>
